{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 4498,
  "lineage": "19d63781-d8d4-d8a6-a777-44826ac2bf7b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:security-group/sg-0e162c9ed66e92032",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e162c9ed66e92032",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "900615189257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:security-group/sg-0c46e19c41c85167b",
            "description": "Security group for VPC endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c46e19c41c85167b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hadar-endpoints-sg",
            "name_prefix": "",
            "owner_id": "900615189257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hadar-endpoints-sg"
            },
            "tags_all": {
              "Name": "hadar-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "gitlab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:security-group/sg-04251d10996ff52f6",
            "description": "Open all traffic for GitLab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04251d10996ff52f6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hadar-gitlab-sg",
            "name_prefix": "",
            "owner_id": "900615189257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hadar-gitlab-sg"
            },
            "tags_all": {
              "Name": "hadar-gitlab-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_agent_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:security-group/sg-09c30c5de49bfc8c1",
            "description": "Open all traffic for Jenkins Agent",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c30c5de49bfc8c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hadar-jenkins-agent-sg",
            "name_prefix": "",
            "owner_id": "900615189257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hadar-jenkins-agent-sg"
            },
            "tags_all": {
              "Name": "hadar-jenkins-agent-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_controller_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:security-group/sg-043e36aa54a2bb622",
            "description": "Open all traffic for Jenkins Controller",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043e36aa54a2bb622",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "hadar-jenkins-controller-sg",
            "name_prefix": "",
            "owner_id": "900615189257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hadar-jenkins-controller-sg"
            },
            "tags_all": {
              "Name": "hadar-jenkins-controller-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:loadbalancer/app/myapp-alb/d1092f0fbd53e367",
            "arn_suffix": "app/myapp-alb/d1092f0fbd53e367",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "myapp-alb-2135148441.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:loadbalancer/app/myapp-alb/d1092f0fbd53e367",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "myapp-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e162c9ed66e92032"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-070513ade47428966"
              },
              {
                "subnet_id": "subnet-0b60c3f45cf4f0280"
              }
            ],
            "subnets": [
              "subnet-070513ade47428966",
              "subnet-0b60c3f45cf4f0280"
            ],
            "tags": {
              "Name": "myapp-alb"
            },
            "tags_all": {
              "Name": "myapp-alb"
            },
            "vpc_id": "vpc-0a3928f5643954202",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.listener",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:listener/app/myapp-alb/d1092f0fbd53e367/10dfd8233d482bd3",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-jenkins-tg/3d874cc8430f9c99",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:listener/app/myapp-alb/d1092f0fbd53e367/10dfd8233d482bd3",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:loadbalancer/app/myapp-alb/d1092f0fbd53e367",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.alb.aws_lb.main",
            "module.alb.module.target_groups.aws_lb_target_group.jenkins_tg",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.listener",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "gitlab_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-gitlab-tg/e7f5b1e1c241cad5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:listener-rule/app/myapp-alb/d1092f0fbd53e367/10dfd8233d482bd3/1f77511bd3034741",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/gitlab",
                      "/gitlab*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:listener-rule/app/myapp-alb/d1092f0fbd53e367/10dfd8233d482bd3/1f77511bd3034741",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:listener/app/myapp-alb/d1092f0fbd53e367/10dfd8233d482bd3",
            "priority": 1,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.alb.aws_lb.main",
            "module.alb.module.listener.aws_lb_listener.http",
            "module.alb.module.target_groups.aws_lb_target_group.gitlab_tg",
            "module.alb.module.target_groups.aws_lb_target_group.jenkins_tg",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.target_groups",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "gitlab_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-gitlab-tg/e7f5b1e1c241cad5",
            "arn_suffix": "targetgroup/myapp-gitlab-tg/e7f5b1e1c241cad5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/gitlab/users/sign_in",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-gitlab-tg/e7f5b1e1c241cad5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myapp-gitlab-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.target_groups",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "jenkins_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-jenkins-tg/3d874cc8430f9c99",
            "arn_suffix": "targetgroup/myapp-jenkins-tg/3d874cc8430f9c99",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/login",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-jenkins-tg/3d874cc8430f9c99",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "myapp-jenkins-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.target_groups",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "gitlab_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-gitlab-tg/e7f5b1e1c241cad5-20250803192436503100000014",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-gitlab-tg/e7f5b1e1c241cad5",
            "target_id": "i-08635dc5ddda7f695"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_sg",
            "module.alb.module.target_groups.aws_lb_target_group.gitlab_tg",
            "module.gitlab_instance.aws_instance.this",
            "module.iam.aws_iam_instance_profile.ec2_ssm_profile",
            "module.iam.aws_iam_role.ec2_ssm_role",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb.module.target_groups",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "jenkins_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-jenkins-tg/3d874cc8430f9c99-20250803192436744100000015",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:900615189257:targetgroup/myapp-jenkins-tg/3d874cc8430f9c99",
            "target_id": "i-0e5b7fc47072e4236"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins_controller_sg",
            "module.alb.module.target_groups.aws_lb_target_group.jenkins_tg",
            "module.iam.aws_iam_instance_profile.ec2_ssm_profile",
            "module.iam.aws_iam_role.ec2_ssm_role",
            "module.jenkins_controller_instance.aws_instance.this",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.gitlab_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0514e03bb2ef89d94",
            "arn": "arn:aws:ec2:eu-central-1:900615189257:instance/i-08635dc5ddda7f695",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hadar-ec2-ssm-profile",
            "id": "i-08635dc5ddda7f695",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b68b74866c754acc",
            "private_dns": "ip-10-0-3-138.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05b1074c3fce02d5c",
                "volume_size": 29,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed0c00c35aa88e8c",
            "tags": {
              "Name": "hadar-gitlab"
            },
            "tags_all": {
              "Name": "hadar-gitlab"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04251d10996ff52f6"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.gitlab_sg",
            "module.iam.aws_iam_instance_profile.ec2_ssm_profile",
            "module.iam.aws_iam_role.ec2_ssm_role",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_agent_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01cc8f0a2eeee1d10",
            "arn": "arn:aws:ec2:eu-central-1:900615189257:instance/i-0dcd472396dfa9b73",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hadar-jenkins-agent-profile",
            "id": "i-0dcd472396dfa9b73",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b70f1363c43ccb56",
            "private_dns": "ip-10-0-3-217.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-026dc9efce928d5ec",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed0c00c35aa88e8c",
            "tags": {
              "Name": "hadar-jenkins-agent"
            },
            "tags_all": {
              "Name": "hadar-jenkins-agent"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c30c5de49bfc8c1"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins_agent_sg",
            "module.iam.aws_iam_instance_profile.jenkins_agent_instance_profile",
            "module.iam.aws_iam_role.jenkins_agent_role",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_controller_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03f891005134e425d",
            "arn": "arn:aws:ec2:eu-central-1:900615189257:instance/i-0e5b7fc47072e4236",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "hadar-ec2-ssm-profile",
            "id": "i-0e5b7fc47072e4236",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-089c718804215a1a4",
            "private_dns": "ip-10-0-3-162.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-047989ef246d099ec",
                "volume_size": 16,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ed0c00c35aa88e8c",
            "tags": {
              "Name": "hadar-jenkins-controller"
            },
            "tags_all": {
              "Name": "hadar-jenkins-controller"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-043e36aa54a2bb622"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins_controller_sg",
            "module.iam.aws_iam_instance_profile.ec2_ssm_profile",
            "module.iam.aws_iam_role.ec2_ssm_role",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:security-group/sg-0328f0b5fcac21ce3",
            "description": "Security group for EKS control plane",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0328f0b5fcac21ce3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "hadar-eks-sg",
            "name_prefix": "",
            "owner_id": "900615189257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hadar-eks-sg"
            },
            "tags_all": {
              "Name": "hadar-eks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:security-group/sg-05d92b7023099cfd4",
            "description": "Security group for EKS Node Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d92b7023099cfd4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0328f0b5fcac21ce3"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "hadar-node-group-sg",
            "name_prefix": "",
            "owner_id": "900615189257",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "hadar-node-group-sg"
            },
            "tags_all": {
              "Name": "hadar-node-group-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.eks_sg",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:vpc-endpoint/vpce-02ed420d5a1e0559e",
            "dns_entry": [
              {
                "dns_name": "vpce-02ed420d5a1e0559e-lz9sqowq.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02ed420d5a1e0559e-lz9sqowq-eu-central-1a.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-02ed420d5a1e0559e-lz9sqowq-eu-central-1b.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2messages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z052389812F3EBAB5Z8X0"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-02ed420d5a1e0559e",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0693c6f2a20f5e593",
              "eni-0db6e17ab2d4f2943"
            ],
            "owner_id": "900615189257",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c46e19c41c85167b"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2messages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.59",
                "subnet_id": "subnet-0ed0c00c35aa88e8c"
              },
              {
                "ipv4": "10.0.4.167",
                "subnet_id": "subnet-05f15e83646681e2b"
              }
            ],
            "subnet_ids": [
              "subnet-05f15e83646681e2b",
              "subnet-0ed0c00c35aa88e8c"
            ],
            "tags": {
              "Name": "hadar-ec2messages-endpoint"
            },
            "tags_all": {
              "Name": "hadar-ec2messages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:vpc-endpoint/vpce-0ad9a4dd898d35586",
            "dns_entry": [
              {
                "dns_name": "vpce-0ad9a4dd898d35586-59ssqpvt.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0ad9a4dd898d35586-59ssqpvt-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0ad9a4dd898d35586-59ssqpvt-eu-central-1b.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z09972552QBJVJWUQNW5N"
              },
              {
                "dns_name": "ssm.eu-central-1.api.aws",
                "hosted_zone_id": "Z011005030OTWX8QGE377"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ad9a4dd898d35586",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-062a985f0c0ceb496",
              "eni-09cb45eff28331c1c"
            ],
            "owner_id": "900615189257",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c46e19c41c85167b"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.23",
                "subnet_id": "subnet-0ed0c00c35aa88e8c"
              },
              {
                "ipv4": "10.0.4.63",
                "subnet_id": "subnet-05f15e83646681e2b"
              }
            ],
            "subnet_ids": [
              "subnet-05f15e83646681e2b",
              "subnet-0ed0c00c35aa88e8c"
            ],
            "tags": {
              "Name": "hadar-ssm-endpoint"
            },
            "tags_all": {
              "Name": "hadar-ssm-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:vpc-endpoint/vpce-0591d8c92b4ba9972",
            "dns_entry": [
              {
                "dns_name": "vpce-0591d8c92b4ba9972-lfo8p5vh.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0591d8c92b4ba9972-lfo8p5vh-eu-central-1b.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0591d8c92b4ba9972-lfo8p5vh-eu-central-1a.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z01096113SGVUKRKMK25Q"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0591d8c92b4ba9972",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0487f9cbac7eb904b",
              "eni-098ffe27b82cb36cc"
            ],
            "owner_id": "900615189257",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0c46e19c41c85167b"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssmmessages",
            "service_region": "eu-central-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.3.254",
                "subnet_id": "subnet-0ed0c00c35aa88e8c"
              },
              {
                "ipv4": "10.0.4.217",
                "subnet_id": "subnet-05f15e83646681e2b"
              }
            ],
            "subnet_ids": [
              "subnet-05f15e83646681e2b",
              "subnet-0ed0c00c35aa88e8c"
            ],
            "tags": {
              "Name": "hadar-ssmmessages-endpoint"
            },
            "tags_all": {
              "Name": "hadar-ssmmessages-endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:internet-gateway/igw-0faedf59e89ea6ddf",
            "id": "igw-0faedf59e89ea6ddf",
            "owner_id": "900615189257",
            "tags": {
              "Name": "hadar-igw"
            },
            "tags_all": {
              "Name": "hadar-igw"
            },
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.nat_gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094d93457855eb4a5",
            "arn": "arn:aws:ec2:eu-central-1:900615189257:elastic-ip/eipalloc-094d93457855eb4a5",
            "domain": "vpc",
            "id": "eipalloc-094d93457855eb4a5",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-3-77-58-207.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.77.58.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "hadar-eip"
            },
            "tags_all": {
              "Name": "hadar-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking.module.nat_gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094d93457855eb4a5",
            "association_id": "eipassoc-05c10650cecb604e2",
            "connectivity_type": "public",
            "id": "nat-043605741db9f4718",
            "network_interface_id": "eni-059166dcab5765acc",
            "private_ip": "10.0.1.146",
            "public_ip": "3.77.58.207",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070513ade47428966",
            "tags": {
              "Name": "hadar-nat"
            },
            "tags_all": {
              "Name": "hadar-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.internet_gateway.aws_internet_gateway.this",
            "module.networking.module.nat_gateway.aws_eip.this",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:route-table/rtb-030c5c780223c6f52",
            "id": "rtb-030c5c780223c6f52",
            "owner_id": "900615189257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-043605741db9f4718",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hadar-private-rt"
            },
            "tags_all": {
              "Name": "hadar-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.internet_gateway.aws_internet_gateway.this",
            "module.networking.module.nat_gateway.aws_eip.this",
            "module.networking.module.nat_gateway.aws_nat_gateway.this",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.private_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c3092a3cb3b8eb9",
            "route_table_id": "rtb-030c5c780223c6f52",
            "subnet_id": "subnet-0ed0c00c35aa88e8c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.internet_gateway.aws_internet_gateway.this",
            "module.networking.module.nat_gateway.aws_eip.this",
            "module.networking.module.nat_gateway.aws_nat_gateway.this",
            "module.networking.module.private_route_table.aws_route_table.this",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025f41ced2a6e682c",
            "route_table_id": "rtb-030c5c780223c6f52",
            "subnet_id": "subnet-05f15e83646681e2b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.internet_gateway.aws_internet_gateway.this",
            "module.networking.module.nat_gateway.aws_eip.this",
            "module.networking.module.nat_gateway.aws_nat_gateway.this",
            "module.networking.module.private_route_table.aws_route_table.this",
            "module.networking.module.private_subnets.aws_subnet.private",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.private_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:subnet/subnet-0ed0c00c35aa88e8c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed0c00c35aa88e8c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900615189257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hadar-private-1"
            },
            "tags_all": {
              "Name": "hadar-private-1"
            },
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:subnet/subnet-05f15e83646681e2b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f15e83646681e2b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900615189257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hadar-private-2"
            },
            "tags_all": {
              "Name": "hadar-private-2"
            },
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:route-table/rtb-08a597c4aa1edca61",
            "id": "rtb-08a597c4aa1edca61",
            "owner_id": "900615189257",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0faedf59e89ea6ddf",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "hadar-public-rt"
            },
            "tags_all": {
              "Name": "hadar-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.internet_gateway.aws_internet_gateway.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.public_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061b71badf3ffba45",
            "route_table_id": "rtb-08a597c4aa1edca61",
            "subnet_id": "subnet-070513ade47428966"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.internet_gateway.aws_internet_gateway.this",
            "module.networking.module.public_route_table.aws_route_table.this",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097b2ac0a49816bae",
            "route_table_id": "rtb-08a597c4aa1edca61",
            "subnet_id": "subnet-0b60c3f45cf4f0280"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.internet_gateway.aws_internet_gateway.this",
            "module.networking.module.public_route_table.aws_route_table.this",
            "module.networking.module.public_subnets.aws_subnet.this",
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.public_subnets",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:subnet/subnet-070513ade47428966",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070513ade47428966",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900615189257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hadar-public-1",
              "kubernetes.io/cluster/hadar": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "hadar-public-1",
              "kubernetes.io/cluster/hadar": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:subnet/subnet-0b60c3f45cf4f0280",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b60c3f45cf4f0280",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "900615189257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "hadar-public-2",
              "kubernetes.io/cluster/hadar": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "hadar-public-2",
              "kubernetes.io/cluster/hadar": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a3928f5643954202"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.networking.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:900615189257:vpc/vpc-0a3928f5643954202",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b783158c817d3203",
            "default_route_table_id": "rtb-052437f4e4db62356",
            "default_security_group_id": "sg-0276fbef09e3dd812",
            "dhcp_options_id": "dopt-069b06f8ed855cbf5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a3928f5643954202",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052437f4e4db62356",
            "owner_id": "900615189257",
            "tags": {
              "Name": "hadar-vpc"
            },
            "tags_all": {
              "Name": "hadar-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}